2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-encrypt.pl: Call check_amreport with
	  skip_size

2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/flags.m4: Detect clang compiler
	* common-src/ammessage.c: Fix warning found by clang compiler
	* common-src/amutil.c: Fix warning found by clang compiler
	* common-src/conffile.c: Fix warning found by clang compiler
	* common-src/crc32-test.c: Fix warning found by clang compiler
	* common-src/security-util.c: Fix warning found by clang compiler
	* device-src/ndmp-device.c: Fix warning found by clang compiler

2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/Makefile.am: crc32-test.o: AM_CFLAGS += $(SSE42_CFLAGS)
	* common-src/amcrc32chw.c: Use __SSE4_2__, set compiled_with_sse4_2
	* common-src/amcrc32chw.h: Declare compiled_with_sse4_2
	* common-src/amutil.c: Use __SSE4_2__, check compiled_with_sse4_2
	* common-src/crc32-test.c: Use __SSE4_2__

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer/robot.pm: Add 'use Carp;' in
	  Amanda::Changer::robot::Interface::MTX package

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Initial patch by Eric Schnoebelen <eric@cirr.com>
	* common-src/ammessage.c: Check bound on err_code array

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* common-src/security-file.c: use of autoconf defined feature macro
	  instead of hardcoded path

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* config/macro-archive/xsltproc.m4: Fix shell portability problem

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* config/amanda/libs.m4: bash-ism's in the autoconf macros.  autoconf
	  should be written in POSIX sh

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>